--- a/index.html
+++ b/index.html
@@ -92,16 +92,16 @@ section {
             <input type="radio" name="radio-btn" id="radio4">
 
             <div class="slide first">
-                <img src="images/chinese-img.jpg" alt="chinese">
+                <img src="chinese-img.jpg" alt="chinese">
             </div>
             <div class="slide">
-                <img src="images/rice-stew.jpg" alt="rice">
+                <img src="rice-stew.jpg" alt="rice">
             </div>
             <div class="slide">
-                <img src="images/swallow.jpg" alt="swallow">
+                <img src="swallow.jpg" alt="swallow">
             </div>
             <div class="slide">
-                <img src="images/lady-kitchen.jpg" alt="lady">
+                <img src="lady-kitchen.jpg" alt="lady">
             </div>
 
             <div class="navigation-auto">
